#5 fix : overflow-y 문제 해결

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ body {
   height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 #root {
